Bug 1813052: Fix workload detail child overlapping notification drawer

--- a/frontend/public/components/_notification-drawer.scss
+++ b/frontend/public/components/_notification-drawer.scss
@@ -1,3 +1,3 @@
 .co-notification-drawer {
-  z-index: 1;
+  z-index: 6;
 }
